--- a/static/index.html
+++ b/static/index.html
@@ -977,6 +977,199 @@
             font-size: 0.8rem;
             color: #e2e8f0;
             white-space: pre-wrap;
+        }
+
+        /* TimescaleDB und RAG Details Styles */
+        .data-source-section {
+            background: linear-gradient(135deg, #1e3a5f 0%, #1e293b 100%);
+            border: 1px solid #3b82f6;
+            border-radius: 0.5rem;
+            padding: 1rem;
+            margin-bottom: 1rem;
+        }
+
+        .data-source-header {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            font-weight: 600;
+            color: #60a5fa;
+            margin-bottom: 0.75rem;
+            font-size: 0.9rem;
+        }
+
+        .data-source-header .icon {
+            font-size: 1.1rem;
+        }
+
+        .data-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 0.75rem;
+        }
+
+        .data-item {
+            background: rgba(15, 23, 42, 0.6);
+            border-radius: 0.375rem;
+            padding: 0.5rem 0.75rem;
+        }
+
+        .data-item-label {
+            font-size: 0.7rem;
+            color: #64748b;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+        }
+
+        .data-item-value {
+            font-size: 0.85rem;
+            color: #e2e8f0;
+            font-family: 'Consolas', 'Monaco', monospace;
+        }
+
+        .data-item-value.highlight {
+            color: #22c55e;
+            font-weight: 600;
+        }
+
+        .ohlc-table {
+            width: 100%;
+            border-collapse: collapse;
+            font-size: 0.8rem;
+            margin-top: 0.5rem;
+        }
+
+        .ohlc-table th, .ohlc-table td {
+            padding: 0.375rem 0.5rem;
+            text-align: right;
+            border-bottom: 1px solid #334155;
+        }
+
+        .ohlc-table th {
+            color: #64748b;
+            font-weight: 500;
+            text-align: left;
+        }
+
+        .ohlc-table td {
+            font-family: 'Consolas', 'Monaco', monospace;
+            color: #e2e8f0;
+        }
+
+        .indicators-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 0.5rem;
+            margin-top: 0.5rem;
+        }
+
+        .indicator-chip {
+            background: rgba(59, 130, 246, 0.15);
+            border: 1px solid rgba(59, 130, 246, 0.3);
+            border-radius: 0.25rem;
+            padding: 0.25rem 0.5rem;
+            font-size: 0.75rem;
+        }
+
+        .indicator-chip .name {
+            color: #94a3b8;
+        }
+
+        .indicator-chip .value {
+            color: #60a5fa;
+            font-family: 'Consolas', 'Monaco', monospace;
+            font-weight: 500;
+        }
+
+        .rag-doc-list {
+            max-height: 300px;
+            overflow-y: auto;
+        }
+
+        .rag-doc-item {
+            background: rgba(15, 23, 42, 0.6);
+            border: 1px solid #334155;
+            border-radius: 0.375rem;
+            padding: 0.75rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .rag-doc-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 0.5rem;
+        }
+
+        .rag-doc-meta {
+            display: flex;
+            gap: 0.5rem;
+            font-size: 0.75rem;
+        }
+
+        .rag-doc-type {
+            background: #3b82f6;
+            color: white;
+            padding: 0.125rem 0.375rem;
+            border-radius: 0.25rem;
+        }
+
+        .rag-doc-score {
+            color: #22c55e;
+            font-weight: 600;
+        }
+
+        .rag-doc-preview {
+            font-size: 0.75rem;
+            color: #94a3b8;
+            font-family: 'Consolas', 'Monaco', monospace;
+            white-space: pre-wrap;
+            max-height: 80px;
+            overflow-y: auto;
+        }
+
+        .sql-query-box {
+            background: #0f172a;
+            border: 1px solid #334155;
+            border-radius: 0.375rem;
+            padding: 0.75rem;
+            font-family: 'Consolas', 'Monaco', monospace;
+            font-size: 0.75rem;
+            color: #a78bfa;
+            white-space: pre-wrap;
+            max-height: 150px;
+            overflow-y: auto;
+        }
+
+        .collapsible-section {
+            margin-top: 0.5rem;
+        }
+
+        .collapsible-header {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            cursor: pointer;
+            color: #94a3b8;
+            font-size: 0.8rem;
+            padding: 0.25rem 0;
+        }
+
+        .collapsible-header:hover {
+            color: #e2e8f0;
+        }
+
+        .collapsible-content {
+            display: none;
+            margin-top: 0.5rem;
+        }
+
+        .collapsible-section.open .collapsible-content {
+            display: block;
+        }
+
+        .collapsible-section.open .collapsible-arrow {
+            transform: rotate(90deg);
             word-break: break-word;
             max-height: 300px;
             overflow-y: auto;
@@ -1696,7 +1889,8 @@
                 'rag_query': 'RAG Abfrage'
             }[log.query_type] || log.query_type;
 
-            const ragContextHtml = log.rag_context && log.rag_context.length > 0
+            // Legacy RAG Context (für Rückwärtskompatibilität)
+            const ragContextHtml = log.rag_context && log.rag_context.length > 0 && !log.rag_context_details
                 ? `<div class="log-section">
                     <div class="log-section-title">
                         RAG Kontext <span class="log-rag-count">${log.rag_document_count} Dokumente</span>
@@ -1709,6 +1903,12 @@
                 </div>`
                 : '';
 
+            // NEUE TimescaleDB Daten Anzeige
+            const tsdbHtml = renderTimescaleDBData(log.timescaledb_data);
+
+            // NEUE RAG Context Details Anzeige
+            const ragDetailsHtml = renderRAGContextDetails(log.rag_context_details);
+
             // Always show strategy - resolve default strategy name if not specified
             let strategyDisplay = log.strategy_name;
             if (!strategyDisplay) {
@@ -1716,6 +1916,14 @@
                 const defaultStrategy = strategiesCache.find(s => s.is_default);
                 strategyDisplay = defaultStrategy ? defaultStrategy.name : 'Standard';
             }
+
+            // Header badges für Datenquellen
+            const tsdbBadge = log.timescaledb_data
+                ? `<span class="log-strategy-badge" style="background: rgba(34, 197, 94, 0.15); color: #22c55e;">🗄️ ${log.timescaledb_data.rows_fetched} Zeilen</span>`
+                : '';
+            const ragBadge = log.rag_context_details
+                ? `<span class="log-strategy-badge" style="background: rgba(249, 115, 22, 0.15); color: #f97316;">📚 ${log.rag_context_details.documents_used} Docs</span>`
+                : '';
 
             return `
                 <div class="log-entry" onclick="toggleLogEntry(this)">
@@ -1725,6 +1933,8 @@
                             ${log.symbol ? `<span class="log-symbol">${log.symbol}</span>` : ''}
                             <span class="log-timestamp">${timestamp}</span>
                             <span class="log-strategy-badge">📊 ${strategyDisplay}</span>
+                            ${tsdbBadge}
+                            ${ragBadge}
                         </div>
                         <div class="log-meta">
                             <span class="${log.success ? 'log-success' : 'log-error'}">${log.success ? 'Erfolgreich' : 'Fehler'}</span>
@@ -1734,6 +1944,9 @@
                         </div>
                     </div>
                     <div class="log-details">
+                        ${tsdbHtml}
+                        ${ragDetailsHtml}
+                        ${ragContextHtml}
                         <div class="log-section">
                             <div class="log-section-title">System Prompt</div>
                             <div class="log-section-content">${escapeHtml(log.system_prompt || '-')}</div>
@@ -1742,7 +1955,6 @@
                             <div class="log-section-title">User Prompt</div>
                             <div class="log-section-content">${escapeHtml(log.user_prompt || '-')}</div>
                         </div>
-                        ${ragContextHtml}
                         <div class="log-section">
                             <div class="log-section-title">LLM Antwort</div>
                             <div class="log-section-content">${escapeHtml(log.llm_response || '-')}</div>
@@ -1754,6 +1966,173 @@
                             </div>
                         ` : ''}
                     </div>
+                </div>
+            `;
+        }
+
+        function renderTimescaleDBData(tsdb) {
+            if (!tsdb) return '';
+
+            const ohlc = tsdb.ohlc_data || {};
+            const indicators = tsdb.indicators_fetched || {};
+            const indicatorNames = {
+                'rsi14': 'RSI(14)',
+                'macd_main': 'MACD',
+                'macd_signal': 'MACD Signal',
+                'adx': 'ADX',
+                'adx_plus_di': '+DI',
+                'adx_minus_di': '-DI',
+                'bb_upper': 'BB Upper',
+                'bb_middle': 'BB Middle',
+                'bb_lower': 'BB Lower',
+                'atr_d1': 'ATR(D1)',
+                'cci14': 'CCI(14)',
+                'stoch_k': 'Stoch %K',
+                'stoch_d': 'Stoch %D',
+                'ichimoku_tenkan': 'Tenkan',
+                'ichimoku_kijun': 'Kijun',
+                'ma100': 'MA(100)',
+                'strength_4h': 'Stärke 4H',
+                'strength_1d': 'Stärke 1D',
+                'strength_1w': 'Stärke 1W'
+            };
+
+            const formatValue = (v) => v !== null && v !== undefined ? Number(v).toFixed(5) : '-';
+            const formatIndicator = (v) => v !== null && v !== undefined ? Number(v).toFixed(2) : '-';
+
+            // OHLC Tabelle
+            let ohlcHtml = '';
+            if (ohlc.d1 || ohlc.h1 || ohlc.m15) {
+                ohlcHtml = `
+                    <table class="ohlc-table">
+                        <tr>
+                            <th>Timeframe</th>
+                            <th>Open</th>
+                            <th>High</th>
+                            <th>Low</th>
+                            <th>Close</th>
+                        </tr>
+                        ${ohlc.d1 ? `<tr><td>D1 (Daily)</td><td>${formatValue(ohlc.d1.open)}</td><td>${formatValue(ohlc.d1.high)}</td><td>${formatValue(ohlc.d1.low)}</td><td>${formatValue(ohlc.d1.close)}</td></tr>` : ''}
+                        ${ohlc.h1 ? `<tr><td>H1 (Hourly)</td><td>${formatValue(ohlc.h1.open)}</td><td>${formatValue(ohlc.h1.high)}</td><td>${formatValue(ohlc.h1.low)}</td><td>${formatValue(ohlc.h1.close)}</td></tr>` : ''}
+                        ${ohlc.m15 ? `<tr><td>M15 (15min)</td><td>${formatValue(ohlc.m15.open)}</td><td>${formatValue(ohlc.m15.high)}</td><td>${formatValue(ohlc.m15.low)}</td><td>${formatValue(ohlc.m15.close)}</td></tr>` : ''}
+                    </table>
+                `;
+            }
+
+            // Indikatoren
+            const indicatorChips = Object.entries(indicators).map(([key, value]) => `
+                <div class="indicator-chip">
+                    <span class="name">${indicatorNames[key] || key}:</span>
+                    <span class="value">${formatIndicator(value)}</span>
+                </div>
+            `).join('');
+
+            // SQL Query (collapsible)
+            const sqlHtml = tsdb.sql_queries && tsdb.sql_queries.length > 0
+                ? `<div class="collapsible-section" onclick="event.stopPropagation(); this.classList.toggle('open')">
+                        <div class="collapsible-header">
+                            <span class="collapsible-arrow">▶</span> SQL Query anzeigen
+                        </div>
+                        <div class="collapsible-content">
+                            <div class="sql-query-box">${escapeHtml(tsdb.sql_queries[0])}</div>
+                        </div>
+                   </div>`
+                : '';
+
+            return `
+                <div class="data-source-section">
+                    <div class="data-source-header">
+                        <span class="icon">🗄️</span>
+                        TimescaleDB Daten
+                    </div>
+                    <div class="data-grid">
+                        <div class="data-item">
+                            <div class="data-item-label">Tabelle</div>
+                            <div class="data-item-value">${(tsdb.tables_queried || []).join(', ') || '-'}</div>
+                        </div>
+                        <div class="data-item">
+                            <div class="data-item-label">Symbol</div>
+                            <div class="data-item-value">${(tsdb.symbols_queried || []).join(', ') || '-'}</div>
+                        </div>
+                        <div class="data-item">
+                            <div class="data-item-label">Zeilen abgerufen</div>
+                            <div class="data-item-value highlight">${tsdb.rows_fetched || 0}</div>
+                        </div>
+                        <div class="data-item">
+                            <div class="data-item-label">Zeitbereich</div>
+                            <div class="data-item-value">${tsdb.time_range_start ? new Date(tsdb.time_range_start).toLocaleDateString('de-DE') : '-'} - ${tsdb.time_range_end ? new Date(tsdb.time_range_end).toLocaleDateString('de-DE') : '-'}</div>
+                        </div>
+                    </div>
+                    ${ohlcHtml ? `<div style="margin-top: 0.75rem;"><strong style="color: #94a3b8; font-size: 0.8rem;">OHLC Preisdaten:</strong>${ohlcHtml}</div>` : ''}
+                    ${indicatorChips ? `<div style="margin-top: 0.75rem;"><strong style="color: #94a3b8; font-size: 0.8rem;">Technische Indikatoren:</strong><div class="indicators-grid">${indicatorChips}</div></div>` : ''}
+                    ${sqlHtml}
+                </div>
+            `;
+        }
+
+        function renderRAGContextDetails(rag) {
+            if (!rag) return '';
+
+            const docList = (rag.document_details || []).map(doc => `
+                <div class="rag-doc-item">
+                    <div class="rag-doc-header">
+                        <div class="rag-doc-meta">
+                            <span class="rag-doc-type">${doc.type || 'unknown'}</span>
+                            ${doc.symbol ? `<span style="color: #e2e8f0;">${doc.symbol}</span>` : ''}
+                            ${doc.timestamp ? `<span style="color: #64748b;">${new Date(doc.timestamp).toLocaleString('de-DE')}</span>` : ''}
+                        </div>
+                        <div class="rag-doc-meta">
+                            <span class="rag-doc-score">Score: ${doc.similarity_score || '-'}</span>
+                            <span style="color: #64748b;">${doc.content_length || 0} Zeichen</span>
+                        </div>
+                    </div>
+                    <div class="rag-doc-preview">${escapeHtml(doc.content_preview || '-')}</div>
+                </div>
+            `).join('');
+
+            return `
+                <div class="data-source-section" style="border-color: #f97316; background: linear-gradient(135deg, #3d2a1e 0%, #1e293b 100%);">
+                    <div class="data-source-header" style="color: #fb923c;">
+                        <span class="icon">📚</span>
+                        RAG Kontext Details
+                    </div>
+                    <div class="data-grid">
+                        <div class="data-item">
+                            <div class="data-item-label">Dokumente gefunden</div>
+                            <div class="data-item-value">${rag.documents_retrieved || 0}</div>
+                        </div>
+                        <div class="data-item">
+                            <div class="data-item-label">Dokumente verwendet</div>
+                            <div class="data-item-value highlight">${rag.documents_used || 0}</div>
+                        </div>
+                        <div class="data-item">
+                            <div class="data-item-label">Embedding Model</div>
+                            <div class="data-item-value">${rag.embedding_model || '-'}</div>
+                        </div>
+                        <div class="data-item">
+                            <div class="data-item-label">Performance</div>
+                            <div class="data-item-value">Embed: ${(rag.embedding_time_ms || 0).toFixed(1)}ms | Search: ${(rag.search_time_ms || 0).toFixed(1)}ms</div>
+                        </div>
+                        <div class="data-item">
+                            <div class="data-item-label">Filter Symbol</div>
+                            <div class="data-item-value">${rag.filter_symbol || '-'}</div>
+                        </div>
+                        <div class="data-item">
+                            <div class="data-item-label">Dokument-Typen</div>
+                            <div class="data-item-value">${(rag.filter_document_types || []).join(', ') || '-'}</div>
+                        </div>
+                    </div>
+                    ${rag.query_text ? `<div style="margin-top: 0.75rem;"><strong style="color: #94a3b8; font-size: 0.8rem;">RAG Query:</strong><div class="sql-query-box" style="color: #fb923c;">${escapeHtml(rag.query_text)}</div></div>` : ''}
+                    ${docList ? `
+                        <div class="collapsible-section" onclick="event.stopPropagation(); this.classList.toggle('open')" style="margin-top: 0.75rem;">
+                            <div class="collapsible-header">
+                                <span class="collapsible-arrow">▶</span> Dokument-Details anzeigen (${(rag.document_details || []).length})
+                            </div>
+                            <div class="collapsible-content">
+                                <div class="rag-doc-list">${docList}</div>
+                            </div>
+                        </div>
+                    ` : ''}
                 </div>
             `;
         }
